WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284135
REGRESSION(
284617@main
): Media query does not recognize the p3 color-gamut display
https://bugs.webkit.org/show_bug.cgi?id=284135
Summary
REGRESSION(284617@main): Media query does not recognize the p3 color-gamut di...
Said Abou-Hallawa
Reported
2024-12-05 14:35:00 PST
Created
attachment 473477
[details]
test case On a display-p3 display open the attached test case. A green rectangle should be displayed.
Attachments
test case
(333 bytes, text/html)
2024-12-05 14:35 PST
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-12-05 14:35:41 PST
rdar://138933101
Said Abou-Hallawa
Comment 2
2024-12-05 14:45:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37506
EWS
Comment 3
2024-12-06 17:37:08 PST
Committed
287482@main
(f09cec069734): <
https://commits.webkit.org/287482@main
> Reviewed commits have been landed. Closing PR #37506 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug