REGRESSION(284617@main): Media query does not recognize the p3 color-gamut display https://bugs.webkit.org/show_bug.cgi?id=284135 rdar://138933101

Reviewed by Simon Fraser.

284617@main changed `colorGamut()` such that it checks for the display-p3 color
gamut only when HAVE(IOSURFACE_RGB10) which is enabled on iOS only.

screenProperties should not use screenContentsFormat to set its fields. In fact
the opposite should happen.

The fix is to revert some of the changes in 284617@main.

1. A bool flag screenSupportsExtendedColor will replace screenContentsFormat
   in ScreenData.

2. The function screenSupportsExtendedColor() will be readded. It will be used
   by screenContentsFormat().

3. colorGamut() will replace the call to screenContentsFormat() by calling
   screenSupportsExtendedColor().

* Source/WebCore/css/query/MediaQueryFeatures.cpp:
(WebCore::MQ::Features::colorGamut):
* Source/WebCore/platform/PlatformScreen.h:
* Source/WebCore/platform/ScreenProperties.h:
* Source/WebCore/platform/ios/PlatformScreenIOS.mm:
(WebCore::screenContentsFormat):
(WebCore::screenSupportsExtendedColor):
(WebCore::collectScreenProperties):
* Source/WebCore/platform/mac/PlatformScreenMac.mm:
(WebCore::collectScreenProperties):
(WebCore::screenContentsFormat):
(WebCore::screenSupportsExtendedColor):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/287482@main