Source/WebCore/css/query/MediaQueryFeatures.cpp
@@ -266,12 +266,8 @@ const FeatureSchema& colorGamut()
         [](auto& context) {
             // FIXME: At some point we should start detecting displays that support more colors.
             MatchingIdentifiers identifiers { CSSValueSRGB };
-#if HAVE(IOSURFACE_RGB10)
-            if (screenContentsFormat(context.document->protectedFrame()->mainFrame().protectedVirtualView().get()) == ContentsFormat::RGBA10)
+            if (screenSupportsExtendedColor(context.document->protectedFrame()->mainFrame().protectedVirtualView().get()))
                 identifiers.append(CSSValueP3);
-#else
-            UNUSED_PARAM(context);
-#endif
             return identifiers;
         }
     };
